--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         location /v1/ {
             access_by_lua_file /usr/local/openresty/nginx/lua/access.lua;
             # 使用 host.docker.internal 访问宿主机的 8000 端口
-            proxy_pass http://host.docker.internal:8000/;
+            proxy_pass http://host.docker.internal:8000/v1/;
         }
     }
 }
