--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /Users/luyangcai/trae/LuaShield/docker/redis/data
+      device: ./redis/data
